app/globals.css
/* ... */
@keyframes scale {
  to {
    mask-size: 200vmax;
  }
}

@keyframes loader-frame-cycle {
  0%,
  19.999% {
    opacity: 1;
  }

  20%,
  100% {
    opacity: 0;
  }
}

.loader-frame {
  animation: loader-frame-cycle 600ms linear infinite;
  animation-delay: calc(var(--loader-index) * -120ms);
  opacity: 0;
}

.cn-toast {
  background: var(--popover) !important;
  color: var(--popover-foreground) !important;
  border-color: var(--border) !important;
}

::-webkit-scrollbar {
  width: 0px;
}

::-webkit-scrollbar-track {
  background: transparent;
}

::-webkit-scrollbar-thumb {
  background: oklch(0.705 0.015 286.067);
  border-radius: 4px;
}

::-webkit-scrollbar-thumb:hover {
  background: oklch(0.552 0.016 285.938);
}

:is(
    .dark,
    .catppuccin-mocha,
    .dracula-dark,
    .tokyo-night-night,
    .everforest-dark,
    .gruvbox-dark,
    .flexoki-dark,
    .nord-dark,
    .osaka-jade-dark,
    .rose-pine-main,
    .rose-pine-moon
  )
  ::-webkit-scrollbar-thumb {
  background: oklch(0.552 0.016 285.938);
}

:is(
    .dark,
    .catppuccin-mocha,
    .dracula-dark,
    .tokyo-night-night,
    .everforest-dark,
    .gruvbox-dark,
    .flexoki-dark,
    .nord-dark,
    .osaka-jade-dark,
    .rose-pine-main,
    .rose-pine-moon
  )
  ::-webkit-scrollbar-thumb:hover {
  background: oklch(0.705 0.015 286.067);
}

